--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -7,5 +7,6 @@
       <app-product-tracklisting></app-product-tracklisting>
     </div>
   </div>
-  <div class="row"></div>
+  <div class="row">
+  </div>
 </main>
